--- a/static/style.css
+++ b/static/style.css
@@ -143,6 +143,8 @@
     min-width: 10rem;
     background: var(--second-color);
     max-width: 30vw;
+    display: flex;
+    flex-direction: column;
   }
   
   .user-bubble{
@@ -151,6 +153,8 @@
     padding: 0.5rem;
     background: var(--first-color);
     max-width: 30vw;
+    display: flex;
+    flex-direction: column;
   }
   
   .loading-dots {
@@ -183,22 +187,29 @@
   }
   
   ::-webkit-scrollbar {
-    width: 0.5rem;
+    width: 0.4rem;
   }
   
   ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px var(--fifth-color); 
-    border-radius: 0.5rem;
+    border-radius: 0.4rem;
   }
    
-  /* Handle */
   ::-webkit-scrollbar-thumb {
     background: var(--first-color); 
     border-radius: 10px;
   }
   
-  /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
     background: var(--third-color); 
+  }
+
+  .chatbot-time{
+    font-size: 0.75rem;
+    text-align: end;
+  }
+
+  .user-time{
+    font-size: 0.75rem;
   }
   
